Add download link.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
         <h1>Matt Weeks</h1>
         <h2>Full stack cloud engineer</h2>
-        CV available <a href="./matt-weeks-cv.pdf">here</a>, (new website coming soon).
+        CV available to <a href="./matt-weeks-cv.pdf">view</a> / <a href="./matt-weeks-cv.pdf" download>download</a>, (new website coming
+        soon).
     </body>
 </html>
