Add charity link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <body>
         <h1>Matt Weeks</h1>
         <h2>Full stack cloud engineer</h2>
-        CV available to <a href="./matt-weeks-cv.pdf">view</a> / <a href="./matt-weeks-cv.pdf" download>download</a>, (new website coming
-        soon).
+        Check out my past and present <a href="https://maweeks.github.io/fundraising/">charity fundraising adventures</a>
+        <br />
+        CV available to <a href="./matt-weeks-cv.pdf">view</a> / <a href="./matt-weeks-cv.pdf" download>download</a>.
     </body>
 </html>
