--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>Matt Weeks</h1>
         <h2>Full stack cloud engineer</h2>
-        Check out my past and present <a href="https://maweeks.github.io/fundraising/">charity fundraising adventures</a>
+        Check out my past and present <a href="https://maweeks.github.io/charity-fundraising/">charity fundraising adventures</a>
         <br />
         CV available to <a href="./matt-weeks-cv.pdf">view</a> / <a href="./matt-weeks-cv.pdf" download>download</a>.
     </body>
